[gd_scene load_steps=3 format=3 uid="uid://dhuv0i3csm0jw"]

[ext_resource type="PackedScene" uid="uid://bupf60vnbq063" path="res://scenes/room_config/base_field.tscn" id="1_2b3e5"]
[ext_resource type="Script" uid="uid://cbmmmrqoik83p" path="res://scripts/field_float.gd" id="1_7v3hf"]

[node name="FloatField" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_7v3hf")

[node name="BaseField" parent="." instance=ExtResource("1_2b3e5")]
layout_mode = 1

[node name="CheckButton" parent="BaseField/MarginContainer/HBoxContainer" index="1"]
visible = false

[node name="LineEdit" parent="BaseField/MarginContainer/HBoxContainer" index="2"]
visible = false

[editable path="BaseField"]
